# poetry_sample

./: .flake8  .gitignore  docker-compose.yml  pyproject.toml
docker/python/: Dockerfile
src/sample/: calc.py
tests/: test_calc.py
